--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ build-backend = "uv_build"
 [dependency-groups]
 dev = [
     "pytest>=9.0.1",
+    "pytest-cov>=7.0.0",
     "pytest-mock>=3.15.1",
 ]
 
