--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,8 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    env:
+      SKIP_COM_TESTS: "1"
     strategy:
       matrix:
         python-version: ["3.11", "3.12"]
