--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -11,6 +11,8 @@ on:
 jobs:
   test:
     runs-on: ${{ matrix.os }}
+    env:
+        PYTHONIOENCODING: "utf-8"
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest]
