- パイプライン基盤（inputs/artifacts/steps）と事前ステップを新設: pipeline.py - 抽出の事前処理をパイプライン化し、integrate.py を簡素化: integrate.py - パイプラインの挙動を検証するテスト追加: test_pipeline.py - テスト要件を追記: TEST_REQUIREMENTS.md - タスク完了チェック反映: TASKS.md

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -123,6 +123,6 @@ markers = [
 ruff = "ruff check ."
 format = "ruff check . --fix"
 mypy = "mypy src/exstruct --strict"
-pytest = "pytest -vv --cov"
+test = "pytest -vv --cov"
 docs = "mkdocs serve"
 build-docs = "mkdocs build && python scripts/gen_json_schema.py && python scripts/gen_model_docs.py"
